added html header

--- a/index.html
+++ b/index.html
@@ -2,6 +2,38 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/post-this-cat/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/post-this-cat/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/post-this-cat/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/post-this-cat/favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/post-this-cat/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <link rel="shortcut icon" href="/post-this-cat/favicon/favicon.ico" />
+    <meta name="apple-mobile-web-app-title" content="Post This Cat" />
+    <meta name="application-name" content="Post This Cat" />
+    <meta name="msapplication-TileColor" content="#00aba9" />
+    <meta
+      name="msapplication-config"
+      content="/post-this-cat/favicon/browserconfig.xml"
+    />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <h1>post this cat when they least expect it</h1>
