--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     <h2>Guidelines</h2>
     <ul>
       <li>
-        <strong>Unexpected</strong> &mdash; Whoever finds this cat must not
-        think they will find it when they find it.
+        <strong>Unexpected</strong> &mdash; Whoever finds this cat
+        <em>must not think they will find it</em> when they find it.
       </li>
       <li>
-        <strong>Shocking</strong> &mdash; The act of finding this cat must be a
-        surprise.
+        <strong>Shocking</strong> &mdash; The act of finding this cat must feel
+        surprising.
       </li>
       <li>
         <strong>Non-Disruptive</strong> &mdash; Finding this cat shall not
