--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       content="/post-this-cat/favicon/browserconfig.xml"
     />
     <meta name="theme-color" content="#ffffff" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <h1>post this cat when they least expect it</h1>
