--- a/index.html
+++ b/index.html
@@ -37,22 +37,24 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <h1>post this cat when they least expect it</h1>
-    <h2>[cat sheet pdf here]</h2>
-    <h2>Guidelines</h2>
-    <ul>
-      <li>
-        <strong>Unexpected</strong> &mdash; Whoever finds this cat
-        <em>must not think they will find it</em> when they find it.
-      </li>
-      <li>
-        <strong>Shocking</strong> &mdash; The act of finding this cat must feel
-        surprising.
-      </li>
-      <li>
-        <strong>Non-Disruptive</strong> &mdash; Finding this cat shall not
-        infringe on others' tasks or activities.
-      </li>
-    </ul>
+    <main>
+      <h1>post this cat when they least expect it</h1>
+      <h2>[cat sheet pdf here]</h2>
+      <h2>Guidelines</h2>
+      <ul>
+        <li>
+          <strong>Unexpected</strong> &mdash; Whoever finds this cat
+          <em>must not think they will find it</em> when they find it.
+        </li>
+        <li>
+          <strong>Shocking</strong> &mdash; The act of finding this cat must
+          feel surprising.
+        </li>
+        <li>
+          <strong>Non-Disruptive</strong> &mdash; Finding this cat shall not
+          infringe on others' tasks or activities.
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
