--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       <h1>post this cat when they least expect it</h1>
       <h2>[cat sheet pdf here]</h2>
       <h2>Guidelines</h2>
+      <p>
+        We aren't here to be disruptive, just surprising! As such, please
+        consider these guidelines to how you should Post This Cat
+      </p>
       <ul>
         <li>
           <strong>Unexpected</strong> &mdash; Whoever finds this cat
