added more slogans

--- a/pdf.html
+++ b/pdf.html
@@ -69,6 +69,8 @@
         "Scan this QR code to get rickrolled:",
         "post this qr code when they least expect it",
         "Join Us.",
+        "Post the cat yourself:",
+        "the cat shalt be fruitful and multiply",
       ];
 
       for (let i = 0; i < 12; i++) {
