--- a/pdf.html
+++ b/pdf.html
@@ -71,6 +71,9 @@
         "Join Us.",
         "Post the cat yourself:",
         "the cat shalt be fruitful and multiply",
+        "waiter, more cats please",
+        "meow",
+        "I CAN HAZ CATS????",
       ];
 
       for (let i = 0; i < 12; i++) {
