--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h2>Guidelines</h2>
       <p>
         We aren't here to be disruptive, just surprising! As such, please
-        consider these guidelines to how you should Post This Cat:
+        consider these guidelines should you Post This Cat:
       </p>
       <ul>
         <li>
