one sided and two sided images+pdfs

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           // const win = window.open('./post-this-cat.pdf');
           // win.print();
           const iframe = document.createElement('iframe');
-          iframe.src = './post-this-cat.pdf';
+          iframe.src = './post-this-cat-two-sided.pdf';
           iframe.style.display = 'none';
           document.body.appendChild(iframe);
           iframe.focus();
