--- a/pdf.html
+++ b/pdf.html
@@ -57,7 +57,7 @@
       <img src="favicon/android-chrome-512x512.png" />
       <img src="favicon/android-chrome-512x512.png" />
     </div>
-    <div id="instructions"></div>
+    <div id="instructions" style="display: none"></div>
     <script>
       const instr = document.getElementById("instructions");
 
