--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     />
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./modal.css" />
   </head>
   <body>
     <main>
@@ -80,5 +81,16 @@
         </section>
       </div>
     </main>
+    <modal>
+      <h2>Choose Your Fighter</h2>
+      <div class="modal-columns">
+        <div>
+          <h3>Two-Sided</h3>
+        </div>
+        <div>
+          <h3>One-Sided</h3>
+        </div>
+      </div>
+    </modal>
   </body>
 </html>
