pdf preview front and back rename

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -87,9 +87,11 @@
       <div class="modal-columns">
         <div>
           <h3>Two-Sided</h3>
+          <img src="./pdf-preview-two-sided.png" />
         </div>
         <div>
           <h3>One-Sided</h3>
+          <img src="./pdf-preview-one-sided.png" />
         </div>
       </div>
     </modal>
