Minor Spelling Error

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h2>Print This Cat!</h2>
           <ul class="hero-list">
             <li>Spread the <del>word</del> cat</li>
-            <li>Do a mild-to-moderate amoount of trolling</li>
+            <li>Do a mild-to-moderate amount of trolling</li>
             <li class="list-special">They will never expect it</li>
           </ul>
         </div>
