added opengraph metadata

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <!doctype html>
 <html>
   <head>
+    <title>Embed This Cat</title>
+    <meta content="Embed This Cat" property="og:title">
+    <meta content="Do it now." property="og:description">
+    <meta content="https://cat.robert.zip" property="og:url">
+    <meta content="https://cat.robert.zip/pdf-preview-front.png" property="og:image">
+    <meta content="#FFFFFF" name="theme-color">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="apple-touch-icon"
