Add back description

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
 
       <section>
         <h2>Guidelines</h2>
+        <p>
+          We aren't here to be disruptive, just surprising! As such, please
+          consider these guidelines to how you should Post This Cat
+        </p>
         <ul>
           <li>
             <strong>Unexpected</strong> &mdash; Whoever finds this cat
