--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
           >
             <h3>Two-Sided</h3>
             <div class="modal-imgs stacked-imgs">
-              <img src="./pdf-preview-one-sided.jpg" />
               <img src="./pdf-preview-front.jpg" />
+              <img src="./pdf-preview-back.jpg" />
             </div>
           </a>
           <a
@@ -119,7 +119,7 @@
           >
             <h3>One-Sided</h3>
             <div class="modal-imgs">
-              <img src="./pdf-preview-one-page.jpg" />
+              <img src="./pdf-preview-one-sided.jpg" />
             </div>
           </a>
         </div>
