--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/post-this-cat/favicon/apple-touch-icon.png"
+      href="/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/post-this-cat/favicon/favicon-32x32.png"
+      href="/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/post-this-cat/favicon/favicon-16x16.png"
+      href="/favicon/favicon-16x16.png"
     />
     <link rel="manifest" href="/post-this-cat/favicon/site.webmanifest" />
     <link
       rel="mask-icon"
-      href="/post-this-cat/favicon/safari-pinned-tab.svg"
+      href="/favicon/safari-pinned-tab.svg"
       color="#5bbad5"
     />
-    <link rel="shortcut icon" href="/post-this-cat/favicon/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
     <meta name="apple-mobile-web-app-title" content="Post This Cat" />
     <meta name="application-name" content="Post This Cat" />
     <meta name="msapplication-TileColor" content="#00aba9" />
