--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="hero-image-wrapper">
           <img
             class="hero-image"
-            src="./pdf-preview-front.png"
+            src="./pdf-preview-front.jpg"
             alt="Cat image PDF"
           />
         </div>
@@ -109,8 +109,8 @@
           >
             <h3>Two-Sided</h3>
             <div class="modal-imgs stacked-imgs">
-              <img src="./pdf-preview-back.png" />
-              <img src="./pdf-preview-front.png" />
+              <img src="./pdf-preview-back.jpg" />
+              <img src="./pdf-preview-front.jpg" />
             </div>
           </a>
           <a
@@ -119,7 +119,7 @@
           >
             <h3>One-Sided</h3>
             <div class="modal-imgs">
-              <img src="./pdf-preview-front.png" />
+              <img src="./pdf-preview-one-sided.jpg" />
             </div>
           </a>
         </div>
