changed links to open in new tab

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
         <div class="modal-columns">
           <a
             class="print-opt"
-            onclick="printpdf('./post-this-cat-two-sided.pdf')"
+            href="./post-this-cat-two-sided.pdf"
+            target="_blank"
           >
             <h3>Two-Sided</h3>
             <div class="modal-imgs stacked-imgs">
@@ -115,7 +116,8 @@
           </a>
           <a
             class="print-opt"
-            onclick="printpdf('./post-this-cat-one-sided.pdf')"
+            href="./post-this-cat-one-sided.pdf"
+            target="_blank"
           >
             <h3>One-Sided</h3>
             <div class="modal-imgs">
