--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="Embed This Cat" property="og:title">
     <meta content="Do it now." property="og:description">
     <meta content="https://cat.robert.zip" property="og:url">
-    <meta content="https://cat.robert.zip/pdf-preview-front.png" property="og:image">
+    <meta content="https://cat.robert.zip/pdf-preview-front.jpg" property="og:image">
     <meta content="#FFFFFF" name="theme-color">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -32,7 +32,7 @@
       href="/favicon/safari-pinned-tab.svg"
       color="#5bbad5"
     />
-    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="shortcut icon" href="/post-this-cat/favicon/favicon.ico" />
     <meta name="apple-mobile-web-app-title" content="Post This Cat" />
     <meta name="application-name" content="Post This Cat" />
     <meta name="msapplication-TileColor" content="#00aba9" />
