--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
           </li>
         </ul>
       </section>
+      <hr class="fancy-hr">
+      <section>
+        <h2>About This Site</h2>
+        <p>
+          Found a bug? Want to make improvements? <a href="https://github.com/FireIsGood/post-this-cat">Open an issue or submit a PR!</a>
+        </p>
+      </section>
     </main>
 
     <dialog id="print-modal">
