--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
       sizes="16x16"
       href="/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="/post-this-cat/favicon/site.webmanifest" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
     <link
       rel="mask-icon"
       href="/favicon/safari-pinned-tab.svg"
       color="#5bbad5"
     />
-    <link rel="shortcut icon" href="/post-this-cat/favicon/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
     <meta name="apple-mobile-web-app-title" content="Post This Cat" />
     <meta name="application-name" content="Post This Cat" />
     <meta name="msapplication-TileColor" content="#00aba9" />
     <meta
       name="msapplication-config"
-      content="/post-this-cat/favicon/browserconfig.xml"
+      content="/favicon/browserconfig.xml"
     />
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="./style.css" />
