Fix modal hiding when clicking inside

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
       // Close when clicking out
       dialog.addEventListener("click", (event) => {
-        if (event.target.id !== "dialog-content") {
+        if (event.target.id === "print-modal") {
           dialog.close();
         }
       });
