--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       <section>
         <h2>Guidelines</h2>
         <p>
-          We aren't here to be disruptive, just surprising! As such, please
-          consider these guidelines to how you should Post This Cat
+          We aren't here to be disruptive, just surprising! Please
+          consider these guidelines to how you should Post This Cat:
         </p>
         <ul>
           <li>
