Change embed image to full size

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="Embed This Cat" property="og:title">
     <meta content="Do it now." property="og:description">
     <meta content="https://cat.robert.zip" property="og:url">
-    <meta content="https://cat.robert.zip/pdf-preview-front.jpg" property="og:image">
+    <meta content="https://cat.robert.zip/post-this-cat.jpg" property="og:image">
     <meta content="#FFFFFF" name="theme-color">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
