--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="hero-text">
           <h2>Print This Cat!</h2>
           <ul class="hero-list">
-            <li>Spread the <del>word</del> cat</li>
+            <li>Spread the cat</li>
             <li>Do a mild-to-moderate amount of trolling</li>
             <li class="list-special">They will never expect it</li>
           </ul>
