Add spacing via utility classes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h1>post this cat when they least expect it</h1>
 
       <section class="hero">
-        <div class="hero-text">
+        <div class="hero-text space-children">
           <h2>Print This Cat!</h2>
           <ul class="hero-list">
               <li>Spread the <del>word</del> cat</li>
@@ -75,7 +75,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="space-children">
         <h2>Guidelines</h2>
         <p>
           We aren't here to be disruptive, just surprising! Please
@@ -97,7 +97,7 @@
         </ul>
       </section>
       <hr class="fancy-hr">
-      <section>
+      <section class="space-children">
         <h2>About This Site</h2>
         <p>
           Found a bug? Want to make improvements? <a href="https://github.com/FireIsGood/post-this-cat">Open an issue or submit a PR!</a>
