Add fade-in animation to background

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <link rel="stylesheet" href="./modal.css" />
   </head>
   <body>
+    <div class="bg-cover"></div>
+
     <main>
       <h1>post this cat when they least expect it</h1>
 
