--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta content="Embed This Cat" property="og:title" />
     <meta content="Do it now." property="og:description" />
     <meta content="https://cat.robert.zip" property="og:url" />
+    <meta name="twitter:card" content="summary_large_image">
     <meta
       content="https://cat.robert.zip/post-this-cat.jpg"
       property="og:image"
